--- a/Danvers.html
+++ b/Danvers.html
@@ -31,21 +31,21 @@
 	<img SRC="Divine.jpg"width="400 height="500>
 	<img SRC="friends.jpg"width="400 height="500>
 	<img SRC="Kaila.jpg"width="400 height="500>
-	<img SRC="Trip.jpg"width="400 height="500>
-	<img SRC="Trip4.jpg"width="400 height="500>
-	<img SRC="Trip2.jpg"width="400 height="500>
-	<img SRC="Trip3.jpg"width="400 height="500>
+	<img SRC="trip.jpg"width="400 height="500>
+	<img SRC="trip4.jpg"width="400 height="500>
+	<img SRC="trip2.jpg"width="400 height="500>
+	<img SRC="trip3.jpg"width="400 height="500>
 	<img SRC="Chorus.jpg"width="400 height="500>	<p><font size="10">I went to Danvers high school and I made lot of friends during a year</p>
 	
 	<img SRC="Boston.jpg"width="400 height="500>
 	<img SRC="Harvard.jpg"width="400 height="500>
 <p><font size="10">We went to the Boston a lot because Boston is pretty close from Danvers. </p>
 
-<img SRC="Piano.jpg"width="400 height="500>
+<img SRC="piano.jpg"width="400 height="500>
 <p><font size="10">I used to play piano at the church </p>
 
 
-<img SRC="Korean food.jpg"width="400 height="500>
+<img SRC="korean food.jpg"width="400 height="500>
 <p><font size="10">My host dad love korean food so I made korean food for him sometimes. </p>
 
 
